src/test/deca/context/valid/operation-binaire-superieur.deca
// Description:
//    opération binaire supérieur
//
// Resultats:
//    
//
// Historique:
//    cree le 06/01/2023

{
    1>2;
}