src/test/deca/context/invalid/3.33-test-divise.deca
// Description:
//    Test 3.3 fail avec divide
//
// Resultats:
//    
//
// Historique:
//    cree le 06/01/2023

{
    2/true;
}